@@ -5,6 +5,7 @@ Changes for 1.3.3.1
 -Added support for Windows ARM64 target architecture
 -Added support for Apple Silicon target architecture
 -Fixed the inability to enter levels through warp were extension is missing
+-Fixed the inability to use any custom sounds and custom music at level's custom data directory
 
 Changes for 1.3.3
 -Added the "gameinfo.ini" to give the support for the partial customization of internals (window/game title, character names in menu, credits, etc.)
